Basic style and layout complete

--- a/app/style.css
+++ b/app/style.css
@@ -3,6 +3,21 @@ html {
     font-size: 1em;
 }
 
+#logo {
+	max-width: 100%;
+}
+
+label, button {
+	display: inline-block;
+	margin: 0.5em;
+}
+
+input[type='text'] {
+	border: 1px solid #999;
+	border-radius: 0.25em;
+	padding: 2px;
+}
+
 #map {
     font-size: 1em;
 }
@@ -10,7 +25,6 @@ html {
 .link {
     stroke: #555;
 }
-
 
 .nodetxt {
   fill: #fff;
